# yus

./: .gitignore  LICENSE  README.md  classes.dot  packages.dot  pyproject.toml  yus.Game.dot  yus.Word.dot  yus.code-workspace
.github/: copilot-instructions.md
docs/: CONTRIBUTING.md  architecture.md  event_extraction_design.md  usage.md
tests/: add_to_db.py  flat_events.py
tests/data/: gruindoor_20250114T2030-eventstream.json  gruindoor_20250114T2030-transcript.json  gruindoor_20250114T2030.py  team_category_5.json  team_dump_and_drizzle.json
yus/: __init__.py  util.py
yus/processing/: __init__.py
yus/processing/event_extraction/: __init__.py
yus/processing/event_unification/: __init__.py
yus/processing/stats/: __init__.py
yus/processing/transcription/: __init__.py  transcribe.py
yus/processing/visualization/: __init__.py
yus/sports/ultimate/: __init__.py  indoor-terms-amazon-transcribe.csv  indoor.py
yus/web/db/: __init__.py  migrate.py  yus.sqlite3
